# RAP

./: .gitignore  RAPx_README.md  README.md  rust-toolchain.toml
.github/workflows/: doc.yml  test.yml
rapx/: Cargo.toml  build.rs
rapx/patched/safety-parser/: Cargo.toml
rapx/patched/safety-parser/src/: json.rs  lib.rs  split_attrs.rs
rapx/patched/safety-parser/src/configuration/: env.rs  mod.rs
rapx/patched/safety-parser/src/safety/: mod.rs  tests.rs  utils.rs
rapx/scripts/: aggregate_testgen.py
rapx/src/: cli.rs  compat.rs  def_id.rs  help.rs  lib.rs
rapx/src/analysis/: mod.rs  test.rs
rapx/src/analysis/alias_analysis/: mod.rs
rapx/src/analysis/api_dependency/: fuzzable.rs  mono.rs  utils.rs  visit.rs
rapx/src/analysis/callgraph/: default.rs  visitor.rs
rapx/src/analysis/dataflow/: debug.rs  default.rs  graph.rs  mod.rs  types.rs
rapx/src/analysis/helpers/: fn_info.rs  (+2 more)
rapx/src/cli/: analyze.rs  check.rs  verify.rs
rapx/src/graphs/: cfg.rs  scc.rs
rapx/src/helpers/: def_path.rs  draw_dot.rs  fn_info.rs  mir_scan.rs  name.rs  path.rs  show_mir.rs
rapx/src/preprocess/: dummy_fns.rs  mod.rs  ssa_preprocess.rs
rapx/src/utils/: fs.rs  log.rs  mod.rs  source.rs  span.rs
rapx/src/verify/: assets_parser.rs  call_summary.rs  contract.rs  def_use.rs  driver.rs  engine.rs  forward_visit.rs  generic.rs  helpers.rs  mod.rs  path.rs  path_extractor.rs  path_refine.rs  primitive.rs  report.rs  target.rs  verifier.rs
rapx/tests/: tests.rs
rapx/tests/others/: batch.sh
rapx/tests/range/: run_range_tests.sh
rapx/tests/testgen/: .ltgenconfig
(+446 files in other folders)
