[package]
name = "safety-parser"
version = "0.4.3"
edition = "2021"
authors = ["Artisan-Lab <xuh@fudan.edu.cn>"]
description = "A lib for parsing safety tags defined in tag-std"
license = "MPL-2.0"
repository = "https://github.com/Artisan-Lab/tag-std"
readme = "README.md"

[dependencies]
# proc macro stuff
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
proc-macro2 = "1"
prettyplease = "0.2"

# SP configuration
toml = "0.9.2"
indexmap = { version = "2.10.0", features = ["serde"] }
tinytemplate = "1.2.1"
serde = { version = "1", features = ["derive"] }
